updated files, added gitignore and grunt

--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -10,16 +10,32 @@
 }
 @mixin bp($point) {
 	$bp-480: "(min-width: 480px)";
-	$bp-768: "(min-width: 768px)";
+	$bp-640: "(min-width: 640px)";
+	$bp-max-768: "(max-width: 769px)";
+	$bp-768: "(min-width: 769px)";
 	$bp-1000: "(min-width: 1000px)";
+	$bp-1400: "(min-width: 1400px)";
+	$bp-768-1000: "(min-width: 769px) and (max-width: 1000px)";
 	@if $point == 480 {
 		@media #{$bp-480} { @content; }
+	}
+	@else if $point == 640 {
+		@media #{$bp-640} { @content; }
+	}
+	@else if $point == max-768 {
+		@media #{$bp-max-768} { @content; }
 	}
 	@else if $point == 768 {
 		@media #{$bp-768} { @content; }
 	}
 	@else if $point == 1000 {
 		@media #{$bp-1000}  { @content; }
+	}
+	@else if $point == 1400 {
+		@media #{$bp-1400}  { @content; }
+	}
+	@else if $point == 768-1000 {
+		@media #{$bp-768-1000} { @content; }
 	}
 }
 /*--- KEYFRAME ANIMATIONS ---*/
@@ -60,6 +76,12 @@
 	.ie7 & {
 		zoom: 1;
 	}
+}
+@mixin resp_image {
+	display: block;
+	width: 100%;
+	height: auto;
+	margin: 0 auto;
 }
 @mixin hide-text {
 	text-indent: 100%;
