--- a/css/sass/_var.scss
+++ b/css/sass/_var.scss
@@ -12,6 +12,9 @@ $instagram: #507ea3;
 $twitter_blue: #2daae1;
 $facebook_blue: #3b5998;
 $youtube_red: #ff3132;
+$pinterest: #C92228;
+$addthis: #FE6D4C;
+$rss: #FF6600;
 
 $default-box-shadow-color: #000000;
 $default-box-shadow-h-offset: 0;
