--- a/css/sass/_standard.scss
+++ b/css/sass/_standard.scss
@@ -51,11 +51,197 @@ a {
 	border: 5px solid $white;
 	padding: 18px 50px;
 	color: $white;
-	background: url('../images/wave.png') repeat-x top center #b1d4e3;
+	background: $black;
 	text-transform: uppercase;
 	&:hover {
 		color: $white;
-		@include myanim(moving-water 10s linear infinite);
+	}
+}
+.select_it {
+	margin: 0 10%;
+	float: left;
+	position: relative;
+	.select_it_box {
+		background: #FFFFFF;
+		width: 89%;
+		padding: 5%;
+		color: #666666;
+		cursor: pointer;
+		border: 1px solid #c8c8c8;
+		.displayed {
+
+		}
+		.tab {
+
+		}
+	}
+	ul {
+		background: #FFFFFF;
+		position: absolute;
+		z-index: 9999;
+		width: 100%;
+		margin: -1px 0 0;
+		padding: 0;
+		color: #666666;
+		box-sizing: border-box;
+		border-top: none;
+		border-left: 1px solid #c8c8c8;
+		border-right: 1px solid #c8c8c8;
+		border-bottom: 1px solid #c8c8c8;
+		list-style: none inside none;
+		max-height: 125px;
+		overflow: scroll;
+		li {
+			width: 90%;
+			padding: 0 5%;
+			cursor: pointer;
+			&:hover {
+				background: #666666;
+				color: #FFFFFF;
+			}
+		}
+	}
+}
+.addthis_toolbox {
+	a {
+		display: block;
+		float: left;
+		width: 16.66%;
+		height: 30px;
+		.icon {
+			@include vendorize(transition, all .15s ease-in);
+			width: 50%;
+			float: right;
+			margin: 5px 5% 5px 0;
+			display: block;
+			font: 20px/20px $fa;
+			color: $white;
+		}
+		&:hover {
+			.icon {
+				margin: 5px 25% 5px 0;
+			}
+		}
+	}
+	.addthis_button_email {
+		background: $pinterest;
+	}
+	.addthis_button_facebook {
+		background: $facebook_blue;
+	}
+	.addthis_button_twitter {
+		background: $twitter_blue;
+	}
+	.addthis_button_google_plusone_share {
+		background: $black;
+	}
+	.addthis_button_linkedin {
+		background: $linkedin;
+	}
+	.addthis_button_compact {
+		background: $addthis;
+	}
+}
+/*===========================================================================================
+	CONTACT FORM
+===========================================================================================*/
+.contact_form {
+	width: 100%;
+	float: left;
+	label {
+		position: absolute;
+		font: 12px/14px $arial;
+		color: #bebebe;
+		top: 10px;
+		left: 7%;
+		height: 0;
+		@include vendorize(transition, all .25s ease-in);
+		&.show {
+			top: -22px;
+			left: 0;
+			height: auto;
+			background: $black;
+			color: $white;
+			padding: 0 10px;
+			border-radius: 4px 4px 0 0;
+			font: 12px/12px $arial;
+		}
+	}
+	.block {
+		position: relative;
+		margin: 0 0 15px;
+		input[type=text], input[type=email], input[type=number], input[type=tel], select, textarea {
+			width: 100%;
+			resize: none;
+			border: 0;
+			background: $white;
+			padding: 10px;
+			vertical-align: middle;
+			margin: 0;
+			font: normal 11px/20px $arial;
+			-moz-box-sizing: border-box;
+			-webkit-box-sizing: border-box;
+			box-sizing: border-box;
+			&:focus {
+				outline: none;
+				box-shadow: 0px 0px 1px 2px $black;
+			}
+		}
+		textarea {
+			resize: none;
+		}
+		&.omit {
+			label {
+				position: relative;
+				top: auto;
+				left: auto;
+				height: auto;
+			}
+		}
+	}
+	.thirds {
+		width: 100%;
+		float: left;
+		.block {
+			width: 31%;
+			margin: 0 1%;
+
+		}
+	}
+	.button {
+		outline: none;
+		border: none;
+		padding: 10px 25px;
+		text-transform: uppercase;
+		font-style: normal;
+		letter-spacing: 1px;
+		&:focus {
+			outline: none;
+			box-shadow: 0px 0px 1px 2px $black;
+		}
+	}
+}
+.jquery-filestyle {
+	width: 100%;
+	float: left;
+	display: block !important;
+	margin: 0 0 10px;
+	input[type=text] {
+		float: right;
+		background: $white;
+		height: auto;
+		padding: 6px;
+		border: none;
+		font: 12px/16px $arial;
+	}
+	label {
+		cursor: pointer;
+		width: 22%;
+		float: left;
+		background: $black;
+		color: $white;
+		padding: 0 5%;
+		line-height: 29px;
 	}
 }
 /*===========================================================================================
@@ -63,7 +249,6 @@ a {
 ===========================================================================================*/
 .block {
 	width: 100%;
-	padding: 2% 0;
 	float: left;
 	&.inline_block {
 		text-align: center;
