--- a/css/sass/global.scss
+++ b/css/sass/global.scss
@@ -1,21 +1,9 @@
-@import "normalize";
-@import "fonts";
-@import "var";
-@import "mixins";
-@import "standard";
-
-/*===========================================================================================
-	HEADER
-===========================================================================================*/
-header {
-}
-/*===========================================================================================
-	BANNER
-===========================================================================================*/
-.banner {
-}
-/*===========================================================================================
-	FOOTER
-===========================================================================================*/
-footer {
-}
+@import "assets/normalize";
+@import "assets/fonts";
+@import "includes/var";
+@import "includes/mixins";
+@import "layout/elements";
+@import "layout/header";
+@import "layout/banner";
+@import "layout/front_page";
+@import "layout/footer";
