--- a/css/sass/layout/_elements.scss
+++ b/css/sass/layout/_elements.scss
@@ -59,23 +59,19 @@ a { color: $link; &:hover, &:active { color: $body_text; } }
 	width: 100%;
 	float: left;
 	label {
+		background: $black;
+		border-radius: 4px 4px 0 0;
+		color: $white;
+		font: 12px/12px $text;
+		left: 0;
+		padding: 5px 20px;
 		position: absolute;
-		font: 14px/14px $text;
 		text-transform: uppercase;
-		color: $light_black;
-		top: 14px;
-		left: 30px;
-		height: 0;
+		top: -22px;
+		opacity: 0;
 		@include vendorize(transition, all .15s ease-in);
 		&.show {
-			top: -22px;
-			left: 0;
-			height: auto;
-			background: $black;
-			color: $white;
-			padding: 5px 20px;
-			border-radius: 4px 4px 0 0;
-			font: 12px/12px $text;
+			opacity: 1;
 		}
 	}
 	.block {
