included mixin in content elements

--- a/css/sass/layout/_elements.scss
+++ b/css/sass/layout/_elements.scss
@@ -2,43 +2,75 @@
 	LAYOUT
 ===========================================================================================*/
 * { @include box-sizing($box-model: border-box); -webkit-font-smoothing: antialiased; }
-body { font-size: 12px; line-height: 1em; font-family: $text; }
+body { font-size: 16px; line-height: 1em; font-family: $text; color: $body_text; }
 .chromeframe { text-align: center; padding: 10px 0; }
 .container { max-width: 1200px; margin: 0 auto; width: 100%; }
-h1 { font: 2em/2em $heading; }
-h2 { font: 1.8em/1.8em $heading; }
-h3 { font: 1.6em/1.6em $heading; }
-h4 { font: 1.4em/1.4em $heading; }
-h5 { font: 1.2em/1.2em $heading; }
-h6 { font: 1em/1em $heading; font-weight: bold; }
-hr {
-	position: relative;
-	max-width: 210px;
-	border: none;
-	color: #c5bec7;
-	height: 1px;
-	background: #c5bec7;
-	width: 30%;
-	margin: 40px 35% 20px;
-	&:after {
-		content: '';
-		height: 20px;
-		position: absolute;
-		top: -9px;
-		background-color: #e0e0e0;
-		width: 40px;
-		left: 50%;
-		margin: 0 0 0 -20px;
-		background: #e0e0e0;
+.content {
+	h1 { @include font( 2em, 1.2em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em; }
+	h2 { @include font( 1.8em, 1em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em; }
+	h3 { @include font( 1.6em, 1em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em; }
+	h4 { @include font( 1.4em, 1em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em;}
+	h5 { @include font( 1.2em, 1em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em; }
+	h6 { @include font( 1em, 1em, $m_700, $m_900, $m_700_italic, $m_900_italic ); margin: 0 0 1em; }
+	hr { height: 1px; border: none; background: #c2c2c2; max-width: 300px; margin: 0 auto; box-shadow: 0px 0px 1px #ededed; }
+	hr.space { margin: 20px 0 30px; }
+	hr.center_space { margin: 20px auto 30px; }
+/*
+	hr {
+		position: relative;
+		max-width: 210px;
+		border: none;
+		color: #c5bec7;
+		height: 1px;
+		background: #c5bec7;
+		width: 30%;
+		margin: 40px 35% 20px;
+		&:after {
+			content: '';
+			height: 20px;
+			position: absolute;
+			top: -9px;
+			background-color: #e0e0e0;
+			width: 40px;
+			left: 50%;
+			margin: 0 0 0 -20px;
+			background: #e0e0e0;
+		}
 	}
+*/
+	p { @include font( 1em, 1.25em, $m_500, $m_700, $m_500_italic, $m_700_italic ); margin: 0 0 1em; }
+	ul { list-style: disc outside none; margin: 0 0 0 15px; }
+	ul li { @include font( 1em, 1.25em, $m_500, $m_700, $m_500_italic, $m_700_italic ); margin: 0 0 1em; }
+	ul li ul  { margin: 0 0 0 25px; }
+	a { color: $brand; &:hover, &:active { color: $body_text; } }
+	.button, a.button { color: $white; margin: 0 0 1em; }
+	.button, a.button { &.right { @include bp(max-640) { float: none; display: block; margin: 0 auto; } } }
+	&.left { padding: 1em 2%; @include bp(640) { padding: 1% 5% 1% 0; } }
+	&.right { padding: 1em 2%; @include bp(640) { padding: 1% 0 1% 5%; } }
+	&.text_left { text-align: left; }
+	&.text_center { text-align: center; }
+	&.text_right { text-align: right; }
 }
-p { font: 1em/1.25em $text; }
-ul li { font: 1em/1.5em $text; }
-ul li ul  { margin: 0 0 0 25px; }
-a { color: $link; &:hover, &:active { color: $body_text; } }
 .left { float: left; }
 .right { float: right; }
-.image img { @include resp_image; }
+.image {
+	position: relative;
+	img { @include resp_image; }
+	.button {  position: absolute; bottom: 15px; left: 50%; margin: 0 0 0 -122px; }
+}
+.button {
+	text-align: center;
+	color: $white;
+	font: 18px/18px 'museo_sans700', sans-serif;
+	padding: 15px 20px;
+	box-sizing: border-box;
+	background: $turquoise;
+	text-transform: uppercase;
+	border: none;
+	@include inline_block;
+	@include vendorize( transition, all 0.17s ease-in-out);
+}
+/*
 .button {
 	text-align: center;
 	border-radius: 0;
@@ -51,6 +83,9 @@ a { color: $link; &:hover, &:active { color: $body_text; } }
 	@include vendorize( transition, all .15s ease-in );
 	&:hover { color: $white; }
 }
+*/
+.gray_bg { background: #f5f5f5; }
+.dark_bg { background: $light_black; color: $white; }
 .icon { font-family: $fa; }
 .select_it {
 	width: 36%; float: left; position: relative;
@@ -97,28 +132,27 @@ a { color: $link; &:hover, &:active { color: $body_text; } }
 /*===========================================================================================
 	CONTACT FORM
 ===========================================================================================*/
-.contact_form {
+.contact_form, .wpcf7 {
 	width: 100%;
 	float: left;
+	.container { max-width: 650px !important; }
 	label {
-		background: $black;
-		border-radius: 4px 4px 0 0;
+		background: $turquoise;
 		color: $white;
-		font: 12px/12px $text;
-		left: 0;
+		font: 12px/12px $m_700;
+		right: 0;
+		bottom: 0;
 		padding: 5px 20px;
 		position: absolute;
 		text-transform: uppercase;
-		top: -22px;
-		opacity: 0;
+		z-index: 9999;
+		@include opacity(0);
 		@include vendorize(transition, all .15s ease-in);
-		&.show {
-			opacity: 1;
-		}
+		&.show { @include opacity(1); }
 	}
 	.block {
 		position: relative;
-		margin: 0 0 25px;
+		margin: 0 0 15px;
 		input[type=text], input[type=email], input[type=number], input[type=tel], select, textarea {
 			width: 100%;
 			resize: none;
@@ -137,37 +171,52 @@ a { color: $link; &:hover, &:active { color: $body_text; } }
 	.thirds { width: 100%; float: left; }
 	.thirds .block { width: 31%; margin: 0 1%; }
 }
+div.wpcf7-validation-errors { border: 2px solid #f7e700; width: 50%; float: left; margin: 0 25%; text-align: center; padding: 10px 0; min-width: 320px; }
+span.wpcf7-not-valid-tip { color: #f00; font-size: 1em; display: block; width: 100%; float: left; position: absolute; right: 0; text-align: right; padding: 5px 0 0; }
+div.wpcf7-mail-sent-ok { border: 2px solid #398f14; width: 50%; float: left; margin: 0 25%; text-align: center; padding: 10px 0; min-width: 320px; }
 /*===========================================================================================
 	BLOCKS - GENERAL RULES
 ===========================================================================================*/
+section { padding: 25px 0; @include bp(640) { padding: 2% 0; } }
+section.block .container { @include bp(max-1200) { padding: 0 1.5%; } }
 .block {
 	width: 100%;
 	float: left;
 	&.inline_block {
 		text-align: center;
-		.fifth, .quarter, .third, .two_fifths, .half, .three_fifths, .two_thirds, .three_quarters, .four_fifths {
+		.sixth, .fifth, .quarter, .two_sixths, .third, .two_fifths, .three_sixths, .half, .three_fifths, .four_sixths, .two_third, .three_quarters, .four_fifths, .five_sixths {
 			float: none;
 			@include inline-block;
 			.text { text-align: left; }
 		}
 	}
 	&.left {
-		.fifth, .quarter, .third, .two_fifths, .half, .three_fifths, .two_thirds, .three_quarters, .four_fifths { float: left; }
+		.sixth, .fifth, .quarter, .two_sixths, .third, .two_fifths, .three_sixths, .half, .three_fifths, .four_sixths, .two_third, .three_quarters, .four_fifths, .five_sixths { float: left; }
 	}
 	&.right {
-		.fifth, .quarter, .third, .two_fifths, .half, .three_fifths, .two_thirds, .three_quarters, .four_fifths { float: right; }
+		.sixth, .fifth, .quarter, .two_sixths, .third, .two_fifths, .three_sixths, .half, .three_fifths, .four_sixths, .two_third, .three_quarters, .four_fifths, .five_sixths { float: right; }
 	}
-	.fifth, .quarter, .third, .two_fifths, .half, .three_fifths, .two_thirds, .three_quarters, .four_fifths {
+	&.row {
+		.sixth, .fifth, .quarter, .two_sixths, .third, .two_fifths, .three_sixths, .half, .three_fifths, .four_sixths, .two_third, .three_quarters, .four_fifths, .five_sixths {
+			&:first-child { margin: 0; }
+		}	
+	}
+	.sixth, .fifth, .quarter, .two_sixths, .third, .two_fifths, .three_sixths, .half, .three_fifths, .four_sixths, .two_third, .three_quarters, .four_fifths, .five_sixths {
 		&.left { float: left; }
 		&.right { float: right; }
 	}
-	.fifth { width: 20%; }
-	.quarter { width: 25%; }
-	.third { width: 33%; }
-	.two_fifths { width: 40%; }
-	.half { width: 50%; }
-	.three_fifths { width: 60%; }
-	.two_thirds { width: 67%;}
-	.three_quarters { width: 75%; }
-	.four_fifths { width: 80%; }
+	.sixth { width: 100%; @include bp(640) { width: 16%; } }
+	.fifth { width: 100%; @include bp(640) { width: 20%; } }
+	.quarter { width: 100%; @include bp(640) { width: 25%; } }
+	.two_sixths { width: 100%; @include bp(640) { width: 32%; } }
+	.third { width: 100%; @include bp(640) { width: 33%; } }
+	.two_fifths { width: 100%; @include bp(640) { width: 40%; } }
+	.three_sixths { width: 100%; @include bp(640) { width: 48%; } }
+	.half { width: 100%; @include bp(640) { width: 50%; } }
+	.three_fifths { width: 100%; @include bp(640) { width: 60%; } }
+	.four_sixths { width: 100%; @include bp(640) { width: 64%; } }
+	.two_thirds { width: 100%; @include bp(640) { width: 67%;} }
+	.three_quarters { width: 100%; @include bp(640) { width: 75%; } }
+	.four_fifths { width: 100%; @include bp(640) { width: 80%; } }
+	.five_sixths { width: 100%; @include bp(640) { width: 80%; } }
 }
