--- a/css/sass/includes/_var.scss
+++ b/css/sass/includes/_var.scss
@@ -35,6 +35,8 @@ $shadow: #c7c9c8;
 $text_gray: #6f726f;
 $green: #428a70;
 
+$blue: #6A9FD6;
+
 /* ===========================================================
    FONTS
 =========================================================== */
